--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.17.0",
     "react-toast": "^1.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
